--- a/web/index.html
+++ b/web/index.html
@@ -25,11 +25,37 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="payflow">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="google-signin-client_id" content="404459063919-d01624t1bpnbjo0k5f53t7jcqh4atcu9.apps.googleusercontent.com.apps.googleusercontent.com">
 
   <title>payflow</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+  
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+       https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+
+  
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyDlkcXGRF9TNDTB6KtoqoAzhhXyzrGt_Kg",
+      authDomain: "payflow-b8a1e.firebaseapp.com",
+      projectId: "payflow-b8a1e",
+      storageBucket: "payflow-b8a1e.appspot.com",
+      messagingSenderId: "404459063919",
+      appId: "1:404459063919:web:c9939bcc41013a10955b9a",
+      measurementId: "G-4GVC60G8VQ"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
